chore(envrc): add virtual environment sourcing
Automatically sources the .venv virtual environment on directory entry.

--- a/.envrc
+++ b/.envrc
@@ -4,3 +4,6 @@ if has nix_direnv_version; then
   watch_dir flake
   use flake
 fi
+
+## Reloads the virtual environment
+source_env .venv/bin/activate
