--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,9 @@
 [theme]
+base = "dark"
 primaryColor = "#1f77b4"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
-textColor = "#262730"
+backgroundColor = "#0e1117"
+secondaryBackgroundColor = "#262730"
+textColor = "#fafafa"
 font = "sans serif"
 
 [server]
